--- a/rpg-oop-exercise/Base.lproj/Main.storyboard
+++ b/rpg-oop-exercise/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,13 +15,175 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="500" height="500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="Fqs-oD-eyf">
+                                <rect key="frame" x="0.0" y="0.0" width="500" height="500"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="vPG-yJ-ZVU">
+                                <rect key="frame" x="0.0" y="417" width="389" height="83"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="83" id="8y1-SF-pqg"/>
+                                    <constraint firstAttribute="height" constant="67" id="bmn-oi-p0k"/>
+                                    <constraint firstAttribute="width" constant="389" id="e3e-qL-kgc"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="bmn-oi-p0k"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="zaG-8m-wh3">
+                                <rect key="frame" x="368" y="417" width="389" height="83"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="67" id="BTn-dd-oXr"/>
+                                    <constraint firstAttribute="height" constant="83" id="HA6-OL-es9"/>
+                                    <constraint firstAttribute="width" constant="389" id="gOM-jr-rdX"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="BTn-dd-oXr"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="print" translatesAutoresizingMaskIntoConstraints="NO" id="JbO-HD-6b5">
+                                <rect key="frame" x="81" y="12" width="338" height="67"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="67" id="Shv-WX-YBb"/>
+                                    <constraint firstAttribute="width" constant="338" id="fef-SD-yV4"/>
+                                </constraints>
+                            </imageView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lQt-1I-ZcQ">
+                                <rect key="frame" x="331" y="281" width="140" height="137"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="N6U-vC-nEf"/>
+                                    <constraint firstAttribute="height" constant="137" id="cac-Ab-vOS"/>
+                                </constraints>
+                                <state key="normal" image="chest"/>
+                                <connections>
+                                    <action selector="onChestTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ASq-1R-7I4"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="player" translatesAutoresizingMaskIntoConstraints="NO" id="VSn-h4-DSq">
+                                <rect key="frame" x="35" y="268" width="137" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="6S6-Hz-IXu"/>
+                                    <constraint firstAttribute="width" constant="137" id="PjY-OL-GbN"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="enem1" translatesAutoresizingMaskIntoConstraints="NO" id="fxo-mt-qnM">
+                                <rect key="frame" x="325" y="284" width="137" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="HIQ-UW-YvX"/>
+                                    <constraint firstAttribute="width" constant="137" id="e4P-zQ-9ca"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press the attack button to begin!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Dn-Ob-n1c">
+                                <rect key="frame" x="102" y="35" width="295" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="295" id="Wdz-Bz-94d"/>
+                                    <constraint firstAttribute="height" constant="21" id="YU3-Pq-ccY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.91202255740000004" blue="0.1269511176" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100 HP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ei1-n0-TgM">
+                                <rect key="frame" x="159" y="268" width="71" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="71" id="e8w-QB-cBS"/>
+                                    <constraint firstAttribute="height" constant="20" id="t7r-ri-pDb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100 HP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7z-po-6ee" userLabel="Enemy Hp Lbl">
+                                <rect key="frame" x="302" y="268" width="71" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="JLF-re-SWs"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="71" id="la5-5H-BSp"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="tDf-YL-pjM"/>
+                                    <constraint firstAttribute="width" constant="71" id="yp5-Aw-BHO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nv5-v1-hbv">
+                                <rect key="frame" x="400" y="396" width="80" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="6x0-9F-wRb"/>
+                                    <constraint firstAttribute="width" constant="80" id="SvQ-QN-6oD"/>
+                                </constraints>
+                                <state key="normal" image="attack"/>
+                                <connections>
+                                    <action selector="onAttackTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WlY-KG-UcU"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="vPG-yJ-ZVU" secondAttribute="trailing" id="32w-Ir-6wS"/>
+                            <constraint firstAttribute="trailing" secondItem="lQt-1I-ZcQ" secondAttribute="trailing" constant="29" id="6EE-Vv-Eif"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fxo-mt-qnM" secondAttribute="bottom" constant="66" id="7YT-2P-zwI"/>
+                            <constraint firstAttribute="trailing" secondItem="nv5-v1-hbv" secondAttribute="trailing" constant="20" id="Ddh-Fb-aJH"/>
+                            <constraint firstItem="JbO-HD-6b5" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="12" id="GOz-9f-xte"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nv5-v1-hbv" secondAttribute="bottom" constant="14" id="M2x-lp-uHb"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vPG-yJ-ZVU" secondAttribute="bottom" id="NJf-Ay-w1R"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vPG-yJ-ZVU" secondAttribute="bottom" id="Qb0-cX-tBo"/>
+                            <constraint firstItem="Fqs-oD-eyf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="RLq-xZ-6Pj"/>
+                            <constraint firstItem="9Dn-Ob-n1c" firstAttribute="centerY" secondItem="JbO-HD-6b5" secondAttribute="centerY" id="YS0-xE-jXq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="h7z-po-6ee" secondAttribute="trailing" constant="107" id="aAW-dg-iXM"/>
+                            <constraint firstItem="zaG-8m-wh3" firstAttribute="top" secondItem="h7z-po-6ee" secondAttribute="bottom" constant="129" id="bJw-Dv-MCT"/>
+                            <constraint firstItem="Ei1-n0-TgM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="139" id="eE0-si-Jem"/>
+                            <constraint firstItem="vPG-yJ-ZVU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gZP-vE-use"/>
+                            <constraint firstItem="JbO-HD-6b5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="icT-aq-QKn"/>
+                            <constraint firstItem="h7z-po-6ee" firstAttribute="centerY" secondItem="Ei1-n0-TgM" secondAttribute="centerY" id="k0O-aL-bpd"/>
+                            <constraint firstItem="vPG-yJ-ZVU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="lm5-lU-eku"/>
+                            <constraint firstItem="vPG-yJ-ZVU" firstAttribute="top" secondItem="Ei1-n0-TgM" secondAttribute="bottom" constant="129" id="luy-ff-z1e"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zaG-8m-wh3" secondAttribute="bottom" id="lwI-6L-Tb5"/>
+                            <constraint firstItem="Fqs-oD-eyf" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="oZD-w1-r4s"/>
+                            <constraint firstItem="VSn-h4-DSq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="35" id="qZn-X3-YcL"/>
+                            <constraint firstAttribute="trailing" secondItem="Fqs-oD-eyf" secondAttribute="trailing" id="rq5-S5-KWu"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="VSn-h4-DSq" secondAttribute="bottom" constant="82" id="u8Y-uR-yuv"/>
+                            <constraint firstItem="zaG-8m-wh3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="348" id="uK7-Wk-uBf"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lQt-1I-ZcQ" secondAttribute="bottom" constant="82" id="vJd-nn-Rud"/>
+                            <constraint firstAttribute="trailing" secondItem="fxo-mt-qnM" secondAttribute="trailing" constant="38" id="xPc-Iq-0FN"/>
+                            <constraint firstItem="9Dn-Ob-n1c" firstAttribute="centerX" secondItem="JbO-HD-6b5" secondAttribute="centerX" id="xTv-HZ-2aO"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Fqs-oD-eyf" secondAttribute="bottom" id="zOi-y6-OaT"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="32w-Ir-6wS"/>
+                                <exclude reference="gZP-vE-use"/>
+                                <exclude reference="Qb0-cX-tBo"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="500" height="500"/>
+                    <connections>
+                        <outlet property="chestBtn" destination="lQt-1I-ZcQ" id="N5z-cm-dDN"/>
+                        <outlet property="enemyHpLbl" destination="h7z-po-6ee" id="eoK-K9-E0x"/>
+                        <outlet property="enemyImg" destination="fxo-mt-qnM" id="IBe-A0-d4q"/>
+                        <outlet property="playerHpLbl" destination="Ei1-n0-TgM" id="oGI-Ae-68b"/>
+                        <outlet property="printLbl" destination="9Dn-Ob-n1c" id="XWa-gJ-ohw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="337"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="attack" width="198" height="223"/>
+        <image name="bg" width="768" height="1024"/>
+        <image name="chest" width="393" height="440"/>
+        <image name="enem1" width="574" height="487"/>
+        <image name="ground" width="768" height="164"/>
+        <image name="player" width="356" height="475"/>
+        <image name="print" width="550" height="83"/>
+    </resources>
 </document>
